@@ -7,6 +7,19 @@
     <artifactId>kafka-examples</artifactId>
     <name>kafka-examples</name>
     <description>kafka-examples</description>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>16</source>
+                    <target>16</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <version>1.0</version>
 
     <parent>
